--- a/wiki/redbug.wiki
+++ b/wiki/redbug.wiki
@@ -9,7 +9,7 @@ powerful. However, they might be a bit hard to get used to.
 
 For example, imagine this problem;
   We have a system using 10,000 processes. Due to a bug, someone
-occasionaly sends the atom 'true' to an important server process. This
+occasionally sends the atom 'true' to an important server process. This
 eventually causes total system failure. We can not easily load code
 onto the system since it sits at a customer site.
   Here's a piece of code (that can be pasted into the Erlang
@@ -18,16 +18,60 @@ and current function of the sending and the receiving processes.
 
 
 {{{
-% we want to define a spawnable fun; Init
-Pi = fun (P) -> try {element(2,case process_info(P,registered_name) of [] -> process_info(P,initial_call); R -> R end), element(2,process_info(P,current_function))} catch _:_ -> dead end end.
-Loop = fun (G) -> receive {trace,Sender,send,true,Rec} -> io:fwrite("~p -> ~p~n", [Pi(Sender), Pi(Rec)]); _ -> ok end, G(G) end.
-Init = fun () -> register(trip,self()), erlang:trace(all,true,[send]), Loop(Loop) end.
+% pulls out process info for a given pid. 
+Pi = fun (P) -> 
+ try 
+  {element(2,case process_info(P,registered_name) of 
+              [] -> process_info(P,initial_call); 
+              R -> R 
+             end), 
+   element(2,process_info(P,current_function))} 
+ catch _:_ -> dead 
+ end 
+end.
+
+% called by Init. receives trace messages, filters, logs the hits.
+Loop = fun (G) -> 
+  receive {trace,Sender,send,true,Rec} -> io:fwrite("~p -> ~p~n", [Pi(Sender), Pi(Rec)]); 
+  _ -> ok end, 
+ G(G) 
+end.
+% called by spawn. registers, starts the trace, calls Loop
+Init = fun () -> 
+  register(trip,self()), 
+  erlang:trace(all,true,[send]), 
+  Loop(Loop) 
+end.
 }}}
 
-% start
-spawn(Init).
+We start the tracer;
+{{{
+1>spawn(Init).
+}}}
 
-% stop
-exit(whereis(trip),kill). 
+For clarity, I'll register a name for the shell;
+{{{
+2>register(luke,self()).
+true
+}}}
+
+So let's send ourself a 'true';
+{{{
+3> self()!true.
+}}}
+
+The tracer will print this;
+{{{
+{luke,{shell,eval_loop,3}} -> {luke,{shell,eval_loop,3}}
+}}}
+
+To be neat, I stop the tracer;
+{{{
+exit(whereis(trip),kill).
+}}}
+
+  Powerful, but not terribly unfriendly.
 
 = Details =
+
+
