--- a/wiki/redbug.wiki
+++ b/wiki/redbug.wiki
@@ -4,20 +4,19 @@
 
 redbug aims to be a safe and simple interface to the erlang trace
 functionality. The erlang tracing (the so-called "trace bifs",
-erlang:trace/3 and erlang:trace_pattern/3) are insanely
+`erlang:trace/3` and `erlang:trace_pattern/3`) are insanely
 powerful. However, they might be a bit hard to get used to.
 
 For example, imagine this problem;
 
 We have a system using 10,000 processes. Due to a bug, someone
-occasionally sends the atom 'true' to an important server process. This
+occasionally sends the atom `true` to an important server process. This
 eventually causes total system failure. We can not easily load code
 onto the system since it sits at a customer site.
 
 Here's a piece of code (that can be pasted into the Erlang
-shell). It will trigger when someone sends 'true', and log the name
+shell). It will trigger when someone sends `true`, and log the name
 and current function of the sending and the receiving processes.
-
 
 {{{
 % pulls out process info for a given pid. 
@@ -69,10 +68,20 @@ The tracer will print this;
 
 To be neat, I stop the tracer;
 {{{
-exit(whereis(trip),kill).
+4>exit(whereis(trip),kill).
 }}}
 
-  Powerful, but not terribly unfriendly.
+Powerful, but not terribly userfriendly.
+
+So clearly, a higher-level interface is in order. The standard OTP
+solution is called `dbg`. Alas, I must recommend against using this on
+live systems, since it is way too easy to get it wrong. 
+
+Try this for a laugh (it *will* kill the node). 
+{{{5> dbg:tracer(),dbg:p(all,m).}}}
+
+Another problem with `dbg` is that it does not lift the level of
+abstraction enough.
 
 = Details =
 
