--- a/wiki/redbug.wiki
+++ b/wiki/redbug.wiki
@@ -74,7 +74,7 @@ To be neat, I stop the tracer;
 4>exit(whereis(trip),kill).
 }}}
 
-Powerful, but not terribly userfriendly.
+Powerful, but not terribly user friendly.
 
 So clearly, a higher-level interface is in order. The standard OTP
 solution is called `dbg`. Alas, I must recommend against using this on
@@ -87,26 +87,36 @@ Try this for a laugh (it *will* kill the node).
 Another problem with `dbg` is that it does not lift the level of
 abstraction enough.
 
-== thing look grim, what to do? ==
+== things look grim, what to do? ==
 
 redbug aims to be a safe and simple interface to the erlang trace
 functionality. 
 
+The simplicity comes from exposing only the most useful (i.e. the bits
+I use often) parts of the API in a concise way.
+
+The safety comes partly from the simplicity, but also from the the
+fact that the redbug process works.
+
+redbug supervises itself and will kill itself if it deems that it is
+in danger of overloading the node. It also delays the processing of
+the trace messages until after the trace is done.
+
+== interface ==
+
 The interface consists of the function `start`.
 
-{{{
 redbug:start(Time,Msgs,Trc[,Proc[,Targ]])
 
-Time: integer() [ms]
-Msgs: integer() [#]
-Trc: list('send'|'receive'|{M,F}|{M,F,RestrictedMatchSpecs})
-Proc: 'all'|pid()|atom(Regname)|{'pid',I2,I3}
-Targ: node()
-RestrictedMatchSpecs: list(RMS)
-RMS: 'stack'|'return'|tuple(ArgDescriptor)
-ArgDescriptor: '_'|literal()
-}}}
-
+ Time: integer() [ms]
+ Msgs: integer() [#]
+ Trc: list('send'|'receive'|{M,F}|{M,F,RestrictedMatchSpecs})
+ Proc: 'all'|pid()|atom(Regname)|{'pid',I2,I3}
+ Targ: node()
+  RestrictedMatchSpecs: list(RMS)
+ RMS: 'stack'|'return'|tuple(ArgDescriptor)
+ ArgDescriptor: '_'|literal()
+ 
 Trace for 5000 milliseconds or until 1 trigger on `erlang:phash`
 
 `redbug:start(5000,1,{erlang,phash}).`
@@ -141,4 +151,19 @@ The trigger was
 `erlang:phash(time,16)`
 called in dict:fetch/2
 and it returned 6.
+
+== misc ==
+
+The call stack displayed by redbug is really a call return stack;
+i.e. only functions that will be returned to are shown. This is a
+feature of the emulator (tail call optimization), and cannot be
+circumvented in a safe way (as far as I know).
+
+redbug has the idiotic/awesome feature that it can be run from a Unix shell.
+actually pretty handy if you're working against an embedded system.
+
+{{{
+bash$ redbug shad@mwux005 3000 2 "{erlang,phash}"
+16:26:00 <prfTrc> {erlang,phash,[time,16]}
+}}}
 
