--- a/wiki/intro.wiki
+++ b/wiki/intro.wiki
@@ -1,11 +1,11 @@
 #summary eper is a set of tools for Erlang Performance tuning and debugging
 
-= Introduction =
+== Introduction ==
 
 Since [http://www.erlang.org Erlang] doesn't have a very intuitive performance model, good tools for performance tuning is a must to get the most out of your system.
 
 
-= Details =
+== Details ==
 
 Tools that make up eper;
   * [sherk]
